# stepik_course_page_object

./: README.md  conftest.py  pyproject.toml
pages/: __init__.py  base_page.py  basket_page.py  locators.py  login_page.py  main_page.py  product_page.py
tests/: test_main_page.py  test_product_page.py
